--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "list",
     "nested"
   ],
-  "author": "Javier Morant",
+  "author": "D",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dongCode/dplus-rn-tree/issues"
